[tool.poetry]
name = "ciphey"
version = "5.14.1"
description = "Automated Decryption Tool"
authors = ["Brandon <brandon@skerritt.blog>"]
license = "MIT"
documentation = "https://github.com/Ciphey/Ciphey/wiki"
exclude = ["tests/hansard.txt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = ">=13.0.0,<14.0.0"
pyyaml = ">=6.0,<7.0.0"
pylint = "^3.0.0"
flake8 = ">=6.0.0,<8.0.0"
cipheydists = "^0.3.35"
cipheycore = "^0.3.2"
appdirs = "^1.4.4"
base58 = "^2.1.0"
base91 = "^1.0.1"
pybase62 = ">=0.5.0,<1.0.0"
click = ">=8.0.0,<9.0.0"
pywhat = ">=5.0.0,<6.0.0"
xortool-ciphey = "^0.1.16"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.4.0"
black = "^23.0.0"
codecov = "^2.1.13"
sphinx = "^7.0.0"
sphinx-autodoc-typehints = "^1.24.0"
nltk = "^3.8"

[tool.poetry.scripts]
ciphey = 'ciphey.ciphey:main'
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

